# bevy_app_compute

./: Cargo.toml
examples/: simple.rs
src/: plugin.rs  worker.rs
